Fix collapsing margin causing ever present scrollbar

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -116,7 +116,8 @@ form .field label  { position:absolute; top:0; left:10px }
 .header {
   height: 60px;
   h1 {
-      margin: 16px 0px 6px 10px;
+      margin: 0px;
+      padding: 16px 0px 6px 10px;
       img {
         float: left;
       }
